--- a/views/ucsi/carreras.ejs
+++ b/views/ucsi/carreras.ejs
@@ -27,8 +27,7 @@
                     <div class="contenidoDesc">
                     <h3 class="nombreCarrera"><a href="#">Ingeniería Informática</a></h3>
                     <p class="duracionCarrera"><span>Duración</span> (5 años + Tesis)</p>
-                        <p class="fa fa-graduation-cap"> Título Intermedio (3 años + Proyecto):<br>Técnico Superior en Informática<br></p>
-                        <p class="fa fa-graduation-cap"> Título Final: Ingeniero Informático</p>
+                        <p class="fa fa-graduation-cap"> Título Final: <br>Ingeniero Informático</p>
                     </div>
                   </div>
                 </div>
@@ -46,9 +45,8 @@
                     </div>
                     <div class="contenidoDesc">
                     <h3 class="nombreCarrera"><a href="#">Administración de Empresas</a></h3>
-                    <p class="duracionCarrera"><span>Duración</span> (4 años y medio)</p>
-                    <p class="fa fa-graduation-cap"> Título Intermedio (3 años):<br>Administrador Asistente<br></p>
-                    <p class="fa fa-graduation-cap"> Título Final: Licenciado en Administración de Empresas</p>
+                    <p class="duracionCarrera"><span>Duración</span> (5 años)</p>
+                    <p class="fa fa-graduation-cap"> Título Final:<br>Licenciado en Administración de Empresas</p>
                     </div>
                   </div>
                 </div>
@@ -66,8 +64,7 @@
                     <div class="contenidoDesc">
                     <h3 class="nombreCarrera"><a href="#">Ciencias Contables</a></h3>
                     <p class="duracionCarrera"><span>Duración</span> (5 años)</p>
-                    <p class="fa fa-graduation-cap"> Título Intermedio (3 años):<br>Asistente Contable<br></p>
-                    <p class="fa fa-graduation-cap"> Título Final: Contador Público Nacional</p>
+                    <p class="fa fa-graduation-cap"> Título Final:<br>Contador Público Nacional</p>
                     </div>
                   </div>
                 </div>
@@ -84,7 +81,7 @@
                     </div>
                     <div class="contenidoDesc">
                     <h3 class="nombreCarrera"><a href="#">Comercio Internacional</a></h3>
-                    <p class="duracionCarrera"><span>Duración</span> (4 años y medio)</p>
+                    <p class="duracionCarrera"><span>Duración</span> (5 años)</p>
                     <p class="fa fa-graduation-cap"> Título Final:<br>Licenciado en Comercio Internacional<br><br><br></p>
                     </div>
                   </div>
@@ -103,7 +100,7 @@
                     <div class="contenidoDesc">
                     <h3 class="nombreCarrera"><a href="#">Derecho</a></h3>
                     <p class="duracionCarrera"><span>Duración</span> (6 años)</p>
-                    <p class="fa fa-graduation-cap"> Título Final:<br>Abogado<br><br></p>
+                    <p class="fa fa-graduation-cap"> Título Final:<br>Abogado/a<br><br></p>
                     </div>
                   </div>
                 </div>
@@ -120,7 +117,7 @@
                     </div>
                     <div class="contenidoDesc">
                     <h3 class="nombreCarrera"><a href="#">Marketing</a></h3>
-                    <p class="duracionCarrera"><span>Duración</span> (4 años y medio)</p>
+                    <p class="duracionCarrera"><span>Duración</span> (5 años)</p>
                     <p class="fa fa-graduation-cap"> Título Final:<br>Licenciado en Marketing<br><br><br></p>
                     </div>
                   </div>
@@ -138,8 +135,8 @@
                     </div>
                     <div class="contenidoDesc">
                     <h3 class="nombreCarrera"><a href="#">Trabajo Social</a></h3>
-                     <p class="duracionCarrera"><span>Duración</span> (5 años)</p>
-                    <p class="fa fa-graduation-cap"> Título Final:</p>
+                     <p class="duracionCarrera"><span>Duración</span> (4 años)</p>
+                    <p class="fa fa-graduation-cap"> Título Final: <br>Trabajador Social <br><br><br></p>
                     </div>
                   </div>
                 </div>
@@ -174,7 +171,7 @@
                     </div>
                     <div class="contenidoDesc">
                     <h3 class="nombreCarrera"><a href="#">Nutrición</a></h3>
-                    <p class="duracionCarrera"><span>Duración</span> (4 años y medio)</p>
+                    <p class="duracionCarrera"><span>Duración</span> (4 años)</p>
                     <p class="fa fa-graduation-cap"> Título Final:<br>Licenciado en Nutrición<br><br></p>
                     </div>
                   </div>
