--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,3 +1,4 @@
+  <% include modal %>
   <header id="cabecera">
     <div class="areaDeMenu">
       <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -16,7 +17,7 @@
               <li class="active"><a href="/">Inicio</a></li>
               <li><a href="admision">Admisión</a></li>
               <li><a href="carreras">Carreras</a></li>
-              <li><a href="#">Post Grados</a></li>
+              <li><a href="#alertModal" data-toggle="modal">Post Grados</a></li>
               <li><a href="lista-eventos">Eventos</a></li>
               <li><a href="galeria">Galería</a></li>
               <li class="dropdown">
