--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -26,8 +26,8 @@
                   <li><a href="unidadpedagogica">Unidad Pedagógica<br>(San Ignacio Misiones)</a></li>
                   <li><a href="nuestra-historia">Nuestra Historia</a></li>
                   <li><a href="identidad">Identidad</a></li>
-                  <li><a href="notfound">Autoridades</a></li>
-                  <li><a href="notfound">Sedes y Campus</a></li>
+                  <li><a href="#alertModal" data-toggle="modal">Autoridades</a></li>
+                  <li><a href="#alertModal" data-toggle="modal">Sedes y Campus</a></li>
                 </ul>
               </li>
               <li><a href="contacto">Contacto</a></li>
