--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -14,7 +14,7 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul id="top-menu" class="nav navbar-nav navbar-right main-nav">
-              <li class="active"><a href="/">Inicio</a></li>
+              <li><a href="/">Inicio</a></li>
               <li><a href="admision">Admisión</a></li>
               <li><a href="carreras">Carreras</a></li>
               <li><a href="#alertModal" data-toggle="modal">Post Grados</a></li>
