--- a/views/ucsi/admision.ejs
+++ b/views/ucsi/admision.ejs
@@ -86,7 +86,7 @@
                     </tr>
                     <tr>
                       <td class="fa fa-chevron-right"></td>
-                      <td>Cuatro fotografías tipo carnet 3 X 4</td>
+                      <td>Tres fotografías tipo carnet 3 X 4</td>
                       <td></td>
                     </tr>
                     <tr>
