--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,8 @@
     src: url(fuente-uca) format(ttf);
 }
 
-body, html {
+body,
+html {
     overflow-x: hidden;
 }
 
@@ -29,7 +30,12 @@ a:focus {
     text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: 'Lato', sans-serif;
 }
 
@@ -46,33 +52,33 @@ img {
 }
 
 .slides-navigation a {
-  position: absolute;
-  display: block;
-  height: 95px;
-  width: 55px;
-
+    position: absolute;
+    display: block;
+    height: 95px;
+    width: 55px;
 }
 
 .slides-navigation a.prev {
-  background-image: url("../images/navSlider.png");
-  background-repeat: no-repeat;
-  background-position: left -240px center;
-  left: 0;
+    background-image: url("../images/navSlider.png");
+    background-repeat: no-repeat;
+    background-position: left -240px center;
+    left: 0;
 }
+
 .slides-navigation a.next {
-  background-image: url("../images/navSlider.png");
-  background-position: left -316px center;
-  background-repeat: no-repeat;
-  right: 0;
+    background-image: url("../images/navSlider.png");
+    background-position: left -316px center;
+    background-repeat: no-repeat;
+    right: 0;
 }
-.slides-navigation a.prev:hover{
-  background-position: left center;
+
+.slides-navigation a.prev:hover {
+    background-position: left center;
 }
+
 .slides-navigation a.next:hover {
-  background-position: left -75px center;
-
+    background-position: left -75px center;
 }
-
 
 .volverArriba {
     border: 3px solid rgb(240, 241, 243);
@@ -113,7 +119,7 @@ img {
     color: rgb(255, 255, 255);
     font-size: 25px;
     font-family: "Times Pro Roman";
-/*    font-weight: bold; */
+    /*    font-weight: bold; */
     margin-top: 15px;
 }
 
@@ -285,6 +291,7 @@ img {
     display: block !important;
 }
 
+
 /*
 *******************************************************
 */
@@ -371,7 +378,7 @@ img {
 }
 
 .seccionNuevasNoticias .media-body > a {
-    text-decoration:none;
+    text-decoration: none;
     display: block;
     font-size: 15px;
     font-weight: bold;
@@ -399,7 +406,6 @@ img {
     text-decoration: none;
     outline: none;
 }
-
 
 #porqueElegir {
     float: left;
@@ -475,7 +481,6 @@ img {
     font-size: 13px;
 }
 
-
 #nuestrasCarreras {
     float: left;
     display: inline;
@@ -490,9 +495,7 @@ img {
     width: 100%;
 }
 
-.navCarreras {
-
-}
+.navCarreras {}
 
 .navCarreras li {
     display: block;
@@ -610,7 +613,6 @@ img {
     font-size: 15px;
 }
 
-
 .navCarreras .slick-prev {
     left: -37px;
     height: 100px;
@@ -636,7 +638,6 @@ img {
     top: 40%;
 }
 
-
 #footer {
     float: left;
     display: inline;
@@ -660,12 +661,11 @@ img {
 
 .footerUniversidad > ul > li > a {
     color: rgb(255, 255, 255);
-
 }
+
 .footerUniversidad > ul > li > a:hover {
     color: #337ab7;
     text-decoration: none;
-
 }
 
 .footerUniversidad > h3 {
@@ -677,7 +677,6 @@ img {
 .footerUniversidad > p {
     color: rgb(255, 255, 255);
 }
-
 
 .footerRedesSociales li a {
     color: rgb(255, 255, 255);
@@ -713,7 +712,10 @@ img {
     text-align: right;
 }
 
+
 /*****************************************************************************************/
+
+
 /*****************************************************************************************/
 
 #portada {
@@ -832,7 +834,6 @@ img {
     width: 100%;
 }
 
-
 .descripcion-Carrera {
     display: inline;
     float: left;
@@ -859,7 +860,6 @@ img {
     color: rgb(255, 255, 255);
 }
 
-
 .tablaMaterias thead > tr > th {
     color: rgb(255, 255, 255);
     text-transform: uppercase;
@@ -867,7 +867,11 @@ img {
 
 
 /****************************************************************/
+
+
 /*  ACA NOS QUEDAMOS                    */
+
+
 /****************************************************************/
 
 .eventosArchivos {
@@ -1142,7 +1146,10 @@ img {
     width: 100%;
 }
 
+
 /***********************************************/
+
+
 /*************************************************/
 
 #galeriaDeFotos {
@@ -1338,8 +1345,6 @@ img {
     color: rgb(121, 137, 146);
     text-decoration: none;
 }
-
-
 
 @media (max-width: 1199px) {
     .areaSliderCenter {
@@ -1585,6 +1590,7 @@ img {
     width: 100%;
     color: white;
 }
+
 .tabMaterias {
     clear: both;
 }
@@ -1598,194 +1604,276 @@ img {
     background-color: rgb(255, 255, 255);
 }
 
+
 /*THEME FJKSDFSA*/
-.navbar-default .navbar-brand span{
-  color: #00AEF0;
-}
-.navbar-default .navbar-brand span{
-  color: #00AEF0;
-}
-.navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover {
+
+.navbar-default .navbar-brand span {
     color: #00AEF0;
 }
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-   color: #00AEF0;
-}
-.dropdown-menu > li > a:focus, .dropdown-menu > li > a:hover {
-  color: #00AEF0 !important;
-}
-.navbar-default .navbar-toggle .icon-bar {
-  background-color: #00AEF0;
-}
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:focus, .navbar-default .navbar-nav > .open > a:hover {
-  background-color: transparent;
-  color: #00AEF0;
-}
-.navbar-default .navbar-nav .open .dropdown-menu > li > a {
-  color: #00AEF0;
-}
-.slides-pagination a.current {
-  background-color: #00AEF0;
-}
-.botonSlider:hover,.botonSlider:focus{
-  color: #00AEF0;
-  border-color: #00AEF0;
-}
-.titulo:after{
-  background-color: #00AEF0;
-}
-.noticiasBorder{border-bottom: 2px solid #00AEF0;}
-.noticiasBorder li.active a,.noticiasBorder li.active a:hover,.noticiasBorder li.active a:focus{
-  border:2px solid;
-  color: #00AEF0 !important;
-  border-color: #00AEF0 #00AEF0 transparent;
+
+.navbar-default .navbar-brand span {
+    color: #00AEF0;
 }
 
-.noticiasBorder li a:hover{
-  background-color: #00AEF0;
+.navbar-default .navbar-nav > li > a:focus,
+.navbar-default .navbar-nav > li > a:hover {
+    color: #00AEF0;
 }
-.seccionNuevasNoticias .media-body > a :hover{
-  color: #00AEF0;
+
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+    color: #00AEF0;
 }
-.verTodos:hover, .verTodos:focus{
-  border-color:#00AEF0;
-  color: #00AEF0;
+
+.dropdown-menu > li > a:focus,
+.dropdown-menu > li > a:hover {
+    color: #00AEF0 !important;
 }
+
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #00AEF0;
+}
+
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:focus,
+.navbar-default .navbar-nav > .open > a:hover {
+    background-color: transparent;
+    color: #00AEF0;
+}
+
+.navbar-default .navbar-nav .open .dropdown-menu > li > a {
+    color: #00AEF0;
+}
+
+.slides-pagination a.current {
+    background-color: #00AEF0;
+}
+
+.botonSlider:hover,
+.botonSlider:focus {
+    color: #00AEF0;
+    border-color: #00AEF0;
+}
+
+.titulo:after {
+    background-color: #00AEF0;
+}
+
+.noticiasBorder {
+    border-bottom: 2px solid #00AEF0;
+}
+
+.noticiasBorder li.active a,
+.noticiasBorder li.active a:hover,
+.noticiasBorder li.active a:focus {
+    border: 2px solid;
+    color: #00AEF0 !important;
+    border-color: #00AEF0 #00AEF0 transparent;
+}
+
+.noticiasBorder li a:hover {
+    background-color: #00AEF0;
+}
+
+.seccionNuevasNoticias .media-body > a:hover {
+    color: #00AEF0;
+}
+
+.verTodos:hover,
+.verTodos:focus {
+    border-color: #00AEF0;
+    color: #00AEF0;
+}
+
 .single_notice_pane .slick-prev {
-  background-color: #00AEF0;
+    background-color: #00AEF0;
 }
+
 .single_notice_pane .slick-next {
-  background-color: #00AEF0;
+    background-color: #00AEF0;
 }
-.tituloPrincipal span{
-  background: none repeat scroll 0 0 #00AEF0;
+
+.tituloPrincipal span {
+    background: none repeat scroll 0 0 #00AEF0;
 }
-.iconPorqueElegir{
-  background: none repeat scroll 0 0 #00AEF0;
+
+.iconPorqueElegir {
+    background: none repeat scroll 0 0 #00AEF0;
 }
-.carreras-info:hover,.carreras-info:focus {
-  color: #00AEF0;
+
+.carreras-info:hover,
+.carreras-info:focus {
+    color: #00AEF0;
 }
-.nombreCarrera a:hover{
-  color: #00AEF0;
+
+.nombreCarrera a:hover {
+    color: #00AEF0;
 }
-.duracionCarrera{
-  color: #00AEF0;
+
+.duracionCarrera {
+    color: #00AEF0;
 }
+
 .tutors_thumb {
-  background: none repeat scroll 0 0 #00AEF0;
+    background: none repeat scroll 0 0 #00AEF0;
 }
-.singTutors_content>span{
-  background-color: #00AEF0;
+
+.singTutors_content>span {
+    background-color: #00AEF0;
 }
-.tutors_socnav li a:hover,.tutors_socnav li a:focus{
-  color: #00AEF0;
-  border-color: #00AEF0;
+
+.tutors_socnav li a:hover,
+.tutors_socnav li a:focus {
+    color: #00AEF0;
+    border-color: #00AEF0;
 }
-.tutors_nav .slick-dots li.slick-active{
-  border-color: #00AEF0;
+
+.tutors_nav .slick-dots li.slick-active {
+    border-color: #00AEF0;
 }
+
 .stsTestimonial_content > p {
-  color: #00AEF0;
+    color: #00AEF0;
 }
-.volverArriba:hover{
-  background-color: #00AEF0;
+
+.volverArriba:hover {
+    background-color: #00AEF0;
 }
-.footerBottomIzq a{
-  color: #00AEF0;
+
+.footerBottomIzq a {
+    color: #00AEF0;
 }
-.paginacion li a{
-  color: #00AEF0;
+
+.paginacion li a {
+    color: #00AEF0;
 }
-.paginacion li a:hover,.paginacion li a:focus{
-  background-color: #00AEF0;
+
+.paginacion li a:hover,
+.paginacion li a:focus {
+    background-color: #00AEF0;
 }
+
 .eventosArchivos {
-  border-bottom: 3px solid #00AEF0;
+    border-bottom: 3px solid #00AEF0;
 }
-.tituloEvento a:hover{
-  color: #00AEF0;
+
+.tituloEvento a:hover {
+    color: #00AEF0;
 }
-.fechayLugar > p:hover{
-  color: #00AEF0;
+
+.fechayLugar > p:hover {
+    color: #00AEF0;
 }
-.fechayLugar>a:hover{
-  color: #00AEF0;
+
+.fechayLugar>a:hover {
+    color: #00AEF0;
 }
-.saberMasEvento:hover,.saberMasEvento:focus{
-  color: #00AEF0;
+
+.saberMasEvento:hover,
+.saberMasEvento:focus {
+    color: #00AEF0;
 }
+
 .saberMasEvento:hover::before,
 .saberMasEvento:hover::after,
 .saberMasEvento:focus::before,
 .saberMasEvento:focus::after {
-  color: #00AEF0;
+    color: #00AEF0;
 }
-.tags_nav li a:hover,.tags_nav li a:focus{
-  background-color: #00AEF0;
+
+.tags_nav li a:hover,
+.tags_nav li a:focus {
+    background-color: #00AEF0;
 }
-.portadaSitio blockquote>span{
-  color: #00AEF0;
+
+.portadaSitio blockquote>span {
+    color: #00AEF0;
 }
+
 .portadaSitio ul li > span {
-  color: #00AEF0;
+    color: #00AEF0;
 }
-.eventoAnterior:hover{
-  color: #00AEF0;
-  border-color: #00AEF0;
+
+.eventoAnterior:hover {
+    color: #00AEF0;
+    border-color: #00AEF0;
 }
-.eventoSiguiente:hover{
-  color: #00AEF0;
-  border-color: #00AEF0;
+
+.eventoSiguiente:hover {
+    color: #00AEF0;
+    border-color: #00AEF0;
 }
+
 .tituloBarCyan > h2 {
-  color: #00AEF0;
+    color: #00AEF0;
 }
-.eventosDeslizador .slick-prev,.eventosDeslizador .slick-next {
-  background-color: #00AEF0;
+
+.eventosDeslizador .slick-prev,
+.eventosDeslizador .slick-next {
+    background-color: #00AEF0;
 }
-.seccionNotFound h1:after, .seccionNotFound h1:before {
-  border: 2px solid #00AEF0;
+
+.seccionNotFound h1:after,
+.seccionNotFound h1:before {
+    border: 2px solid #00AEF0;
 }
-.seccionNotFound p>a:hover{
-  color: #00AEF0;
+
+.seccionNotFound p>a:hover {
+    color: #00AEF0;
 }
+
 .seccionNotFound p:before {
-  border-top: 1px solid #00AEF0;
+    border-top: 1px solid #00AEF0;
 }
+
 .seccionNotFound p:after {
-  border-top: 1px solid #00AEF0;
+    border-top: 1px solid #00AEF0;
 }
+
 .seccionNotFound p {
-  border-bottom: 2px solid #00AEF0;
-  border-top: 2px solid #00AEF0;
+    border-bottom: 2px solid #00AEF0;
+    border-top: 2px solid #00AEF0;
 }
+
 .seccionNotFound h1 {
-  color: #00AEF0;
+    color: #00AEF0;
 }
-.ingresarDatos:focus{
-  border: 1px solid #00AEF0;
+
+.ingresarDatos:focus {
+    border: 1px solid #00AEF0;
 }
+
 .datosEnviar {
-  border: 1px solid #00AEF0;
-  color: #00AEF0;
+    border: 1px solid #00AEF0;
+    color: #00AEF0;
 }
-.datosEnviar:hover,.datosEnviar:focus{
-  background-color: #00AEF0;
-  color: #ffffff;
+
+.datosEnviar:hover,
+.datosEnviar:focus {
+    background-color: #00AEF0;
+    color: #ffffff;
 }
-.dropdown-menu > .active > a, .dropdown-menu > .active > a:focus, .dropdown-menu > .active > a:hover {
-  color: #00AEF0 !important;
+
+.dropdown-menu > .active > a,
+.dropdown-menu > .active > a:focus,
+.dropdown-menu > .active > a:hover {
+    color: #00AEF0 !important;
 }
+
 .seccionEventosSidebar > h2 {
-  background-color: #00AEF0;
+    background-color: #00AEF0;
 }
-.tablaMaterias thead{
-  background-color: #00AEF0;
+
+.tablaMaterias thead {
+    background-color: #00AEF0;
 }
-.seccionEventosSidebar > ul > li>a:hover,.seccionEventosSidebar > ul > li>a:focus{
-  color: #00AEF0;
+
+.seccionEventosSidebar > ul > li>a:hover,
+.seccionEventosSidebar > ul > li>a:focus {
+    color: #00AEF0;
 }
+
 .seccionNuevasNoticias .media-body > a:hover {
-  color: #00AEF0;
+    color: #00AEF0;
 }
