--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12">
             <div class="seccionSobreNosotros wow fadeInLeft">
-              <h2 class="titulo">Unidad pedagógica san ignacio guazú - misiones</h2>
+              <h2 class="titulo">Unidad Pedagógica San Ignacio Guazú - Misiones</h2>
               <p>La Universidad Católica “Nuestra Señora de la Asunción”, servicio y contribución de la Iglesia, es una institución educativa, sin fines de lucro, creada por la Conferencia Episcopal Paraguaya y erigida por la Santa Sede, que tiene por finalidad consagrarse sin reserva a la causa de la Verdad, sirviendo a la dignidad del hombre y a la causa de la Iglesia.</p>
               <p>En la Adquisición de conocimientos útiles, La Universidad Católica se distingue por su libre búsqueda de toda la Verdad acerca de la naturaleza del hombre y de Dios. La Universidad Católica, por el encuentro que establece la riqueza del mensaje salvífico del Evangelio y la pluralidad e infinidad de campos del saber, permite a la iglesia establecer un diálogo con todos los hombres  de cualquier cultura. (Ex Corde Ecclesiae Nro.4.6).</p>
             </div>
@@ -283,7 +283,7 @@
         <div class="row">
           <div class="col-lg-12 col-md-12">
             <div class="tituloPorqueElegir">
-              <h2 class="titulo2PorqueElegir">Nuestra Historia</h2>
+              <h2 class="titulo2PorqueElegir">Nosotros</h2>
               <span></span>
             </div>
           </div>
@@ -294,50 +294,30 @@
               <div class="col-lg-12 col-md-8 col-sm-8">
                 <div class="descripcionContenido">
                   <div class="tituloBarCyan">
-                    <h2>Concebida por la Jerarquía Católica</h2>
+                    <h2>Misión</h2>
                   </div>
                   <div class="row">
                     <div class="col-lg-12 col-12 col-sm-12">
-                      <p>La <b>Universidad Católica “Nuestra Señora de la Asunción”</b> fue concebida por la Jerarquía Católica del Paraguay como una entidad de formación superior, a finales de la década del '50. Los trabajos previos fueron dispuestos por el entonces arzobispo de Asunción y presidente de la Conferencia Episcopal Paraguaya (CEP), Mons. Aníbal Mena Porta.<br><br></p>
-                      <p>En septiembre de 1959, en asamblea plenaria, la CEP reafirmó su derecho de fundar escuelas superiores de educación y el reconocimiento de este derecho por parte de la Constitución Nacional de 1940, vigente en ese tiempo.</p>
+                      <p>La <b>Universidad Católica “Nuestra Señora de la Asunción”</b>, servicio y contribución de la Iglesia, busca a partir de los valores
+                        éticos-cristianos la excelencia en la gestión de docencia, la investigación y la extensión, contribuyendo a una sociedad justa, solidaria,
+                        incluyente, sostenible y respetuosa de la dignidad humana.<br><br></p>
+                      <p>*Según Plan Estratégico 2016-2020, elaborado por el Consejo de la Comunidad Universitaria y aprobado por el Consejo General de Gobierno.</p>
                     </div>
                   </div>
                   <div class="tituloBarCyan">
-                    <h2>Decreto de Fundación</h2>
+                    <h2>Visión</h2>
                   </div>
                   <div class="row">
                     <div class="col-lg-12 col-12 col-sm-12">
-                      <p>El decreto de fundación <i>(firmado por Mons. Mena Porta el 13 de febrero de 1960)</i> expresa que la Universidad Católica se denominará “Nuestra Señora de la Asunción” y estará bajo el alto patrocinio de la CEP y la alta dirección del arzobispo de Asunción en calidad de gran canciller. Dispone, asimismo, que deben honrarse como patronos de la misma al Sagrado Corazón de Jesús y a Nuestra Señora de la Asunción.<br><br></p>
-                      <p>El 22 de marzo de 1960, el Gobierno Nacional mediante el Decreto Nº. 9350 autorizó el funcionamiento de la Universidad Católica “Nuestra Señora de la Asunción”. En sus considerandos, expresaba que "la creación de una nueva Universidad representa una efectiva contribución a la elaboración cultural del país, a la formación intelectual, moral y técnica de la juventud y al desarrollo y conservación del patrimonio científico nacional".</p>
-                    </div>
-                  </div>
-                  <div class="tituloBarCyan">
-                    <h2>Estatutos y Reformas</h2>
-                  </div>
-                  <div class="row">
-                    <div class="col-lg-12 col-12 col-sm-12">
-                      <p>El 24 de junio de 1960, por Decreto Nº. 11.079, el Gobierno aprobó los estatutos sociales de la Universidad y reconoció su personería jurídica. El 6 de setiembre de 1960, la Honorable Cámara de Representantes de la Nación sancionó la Ley Nº. 663 «por la cual se facultaba a la Universidad Católica “Nuestra Señora de la Asunción” a otorgar títulos y diplomas» a través del Ministerio de Educación y Culto.</p>
-                      <p>El 18 de abril de 1996, el presidente de la República del Paraguay por Decreto Nº. 13.059 aprueba las modificaciones introducidas en los estatutos, resueltas en Asamblea General Extraordinaria el13 de julio de 1995. La Fiscalía General del Estado y la Asesoría Jurídica del Ministerio del Interior dieron sus dictámenes favorables al respecto.</p>
-                      <p>El 18 de enero de 2008, una nueva reforma de los Estatutos es aprobada por la Presidencia de la República por Decreto Nº. 11.739, tomando como base los documentos que fueron aprobados por la CEP y protocolizados ante escribano público conforme se acredita en la escritura Nº 30 del 14 de noviembre de 2007.</p>
-                      <p>La 200a. Asamblea Plenaria Extraordinaria de la Conferencia Episcopal Paraguaya, reunidad en 2014, aprobó modificaciones al Estatuto de la Universidad, la que fueron ratificadas por la Sede Apostólica y el Gobierno Nacional.</p>
-                    </div>
-                  </div>
-                  <div class="tituloBarCyan">
-                    <h2>Rectores</h2>
-                  </div>
-                  <div class="row">
-                    <div class="col-lg-12 col-12 col-sm-12">
-                      <p>Mons. Juan Moleón Andreu (1960-1970)<br><br></p>
-                      <p>Mons. Oscar Usher (1970-1980, 1986-1996)<br><br></p>
-                      <p>Dr. Rafael Eladio Velázquez (1981-1985)<br><br></p>
-                      <p>Dr. Antonio Tellechea Solís (1997-2007)<br><br></p>
-                      <p>Mons. Michel Gibaud (2008-2014)<br><br></p>
+                      <p>Institución de referencia en la educación superior en el ámbito nacional y regional, por el aporte substantivo a la investigación, innovación y
+                        la responsabilidad social, desde la Doctrina Social de la Iglesia, por la calidad humana y profesional y por el compromiso cristiano de sus egresados<br><br><br><br></p>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+          <h2 class="titulo"></h2>
         </section>
         <% include partials/footer %>
         <% include partials/footerScripts %>
