--- a/views/ucsi/unidadpedagogica.ejs
+++ b/views/ucsi/unidadpedagogica.ejs
@@ -26,19 +26,47 @@
                 </div>
               </div>
               <div class="tituloBarCyan">
-                <h2>Unidad Pedagógica San Ignacio Misiones</h2>
+                <h2>Universidad Católica "Nuestra Señora de la Asunción"<br>
+                  Unidad Pedagógica de San Ignacio Guazú</h2>
               </div>
               <div class="row">
                 <div class="col-lg-12 col-12 col-sm-12">
-                  <span>Un poco de historia...<br><br></span>
-                  <p>La Región Misionera, es una planicie de aproximadamente 10.000 Km2., con una población estimada  en 200.000 habitantes. Es una zona agropecuaria, cuya principal actividad  es la ganadería y, en menor medida, la agricultura, lo que determina la ruralidad de su población</p>
-                  <p>El subdesarrollo era la constante de la  región, la que podría ser superada solamente con proyectos que busquen frenar la migración, concentrar voluntades y realizar esfuerzos para el desarrollo regional, con ello llegar a superar  la pobreza y la marginación cultural de la zona.</p>
-                  <p>En este contexto se instala la Universidad Católica en San Ignacio, en el año 1.982, y depende académicamente del Campus Itapúa, con asiento en la ciudad de Encarnación. El Sub Campus San Ignacio, se halla ubicada en la ciudad de San Ignacio Guasú (1ra. Reducción Jesuítica establecida en 1.609) del Departamento  de Misiones, a 226 Km. de la Capital del país (Asunción), a 150 Km. de la ciudad de Pilar (Ñeembucu) y a 140 Km. de la ciudad de Encarnación, frontera con la ciudad de Argentina de Posadas.</p>
-                  <p>Gracias al apoyo generoso de la comunidad, desde hace 16 años funciona en su local propio. Dispone de una capacidad instalada para albergar a aproximadamente 900 estudiantes. Cuenta con  Biblioteca, oficinas administrativas, sala del personal docente, sala de computación conectada a Internet y otros.</p>
-                  <p>Por la ubicación estratégica, eje geográfico del departamento de Misiones y, de la región sur del país, desde el inicio de su misión institucional, ofrece sus  servicios a los jóvenes de más de 10 distritos o pueblos del departamento, teniendo un radio de  alcance de 120 Km.</p>
-                  <p>Las primeras carreras habilitadas fueron  las de Pedagogía (de la Facultad de Ciencias de la Educación) y Ciencias Contables y Administrativas, con el  objeto de preparar recursos humanos calificados para atender la expectativa laboral creada con la construcción de la Represa Hidroeléctrica Binacional “Yacyreta” en el departamento, y para responder a la imperiosa necesidad de promover el desarrollo integral de la población misionera mediante una educación eficaz y eficiente, capacitando  y habilitando al personal docente, en especial a los no profesionalizados (los maestros bachilleres).</p>
-                  <p>En el año 1995 fue habilitada la carrera de Ciencias Jurídicas, en el  2000 la carrera de Ingeniería Informática, y en el 2006 fue habilitada la carrera de Trabajo Social y en el 2010 las Carreras de Enfermería y Nutrición, a fin de responder a las necesidades de las instituciones de la zona.</p>
-                  <p>Actualmente, tiene matriculados  aproximadamente a 600 estudiantes, siendo alrededor de 1000 la cantidad de egresados/as en las diversas carreras impartidas desde su creación hace tres décadas. La reestructuración organizativa de la Sede Regional Itapúa  la convirtió primeramente en “Campus Universitario San Ignacio Guazú” (1997), luego en “Sub Sede San Ignacio Guazú” (2005) y Sub Campus San Ignacio Guazú (2009)”</p>
+                  <p>La Universidad Católica “Nuestra Señora de la Asunción”, Campus Universitario de Itapúa Unidad Pedagógica de San Ignacio Guazú,
+                    se halla ubicada en la ciudad de San Ignacio Guazú (1ra. Reducción Jesuítica establecida en 1.609) del Departamento  de Misiones,
+                    a 226 Km. de la Capital del país (Asunción), a 150 Km. de la ciudad de Pilar (Ñeembucu) y a 140 Km. de la ciudad de Encarnación,
+                    frontera con la ciudad de Posadas (República Argentina).</p>
+                  <p>La Unidad Pedagógica de San Ignacio fue creada en 1.982, y depende académicamente del Campus Universitario de Itapúa, con asiento
+                    en la ciudad de Encarnación, pero económicamente es autogestionaria, es decir, depende exclusivamente de su capacidad de generación
+                    de recursos para solventar todos los gastos emergentes del servicio que desarrolla y ofrece.</p>
+                  <p>Gracias al apoyo generoso de la comunidad, desde hace 16 años funciona en su local propio. Dispone de una capacidad instalada para
+                    albergar a aproximadamente 1.000 estudiantes. Cuenta con  Biblioteca, oficinas administrativas, sala del personal docente, sala de
+                    informática conectada a Internet, laboratorios de práctica para Enfermería y Nutrición, un Centro Informático de Desarrollo Tecnológico
+                    (CIDT), entre otros.</p>
+                  <p>Por la ubicación estratégica, eje geográfico del departamento de Misiones y, de la región sur del país, desde el inicio de su misión
+                    institucional, ofrece sus  servicios a los jóvenes de más de 10 distritos o pueblos del departamento, teniendo un radio de  alcance de 120 Km.</p>
+                  <p>Las primeras carreras habilitadas en el año 1982 fueron  las de Pedagogía (de la Facultad de Ciencias de la Educación) y Ciencias
+                    Contables y Administrativas, con el  objeto de preparar recursos humanos calificados para atender la expectativa laboral creada con la
+                    construcción de la Represa Hidroeléctrica Binacional “Yacyreta”-en el departamento, y para responder a la imperiosa necesidad de promover
+                    el desarrollo integral de la población misionera mediante una educación eficaz y eficiente, capacitando  y habilitando al personal docente,
+                    en especial a los no profesionalizados (los maestros bachilleres).</p>
+                  <p>En el año 1995 fue habilitada la carrera de Ciencias Jurídicas, en el  2.000 la carrera de Ingeniería Informática, en el 2006 fueron
+                    habilitadas las carreras de Trabajo Social, y Restauración en el 2010 las carreras de Enfermería y Nutrición en el área de la Salud, y,
+                    Marketing y Comercio Internacional en el área de Ciencias Económicas a fin de responder a las necesidades de la zona. Así mismo, los postítulos
+                    de Habilitación Pedagógica, Notariado y otros, y el Curso de Especialización: Docencia en Educación Superior como Postgrado. </p>
+                  <p>Actualmente, tiene matriculados  aproximadamente a 800 estudiantes, siendo alrededor de 1500 la cantidad de egresados/as en las diversas
+                    carreras impartidas desde su creación  hace más de 30 años.</p>
+                  <p>La reestructuración organizativa de la Sede Regional Itapúa  la convirtió primeramente en “Campus Universitario San Ignacio Guazú” (1997)
+                    y luego en “Sub Sede San Ignacio  Guazú” (2.005), y en Sub Campus San Ignacio Guazú (2008) y finalmente en Unidad Pedagógica (2016)
+                    San Ignacio Guazú</p>
+                  <p>En cuanto a la Extensión Universitaria, cuenta con una Orquesta de Cámara, denominada Ars Barroca, cuyo objetivo fundamental es el rescate
+                    de las músicas de las Reducciones. La orquesta se convierte en un elemento de gran influencia cultural en la Comunidad, ya que por medio
+                    de los conciertos periódicos que ofrece va instruyendo en el conocimiento de la música culta, sirviendo también de espacio de propagación
+                    de nuestra historia y el estudio de teoría y solfeo musical.</p>
+                  <p>Además se cuenta con un ballet de danzas, integrado por alumnas y alumnos de las diferentes Carreras, quienes por medio de esta expresión
+                    del arte llevan el nombre de nuestra casa a los diferentes eventos culturales de relevancia a nivel local, y regional, al tiempo de ser una
+                    forma de integración y de realización de los jóvenes.</p>
+                  <p>La Universidad Católica, considerando este momento histórico muy oportuno para recuperar nuestra memoria histórica, apoya todos los
+                    emprendimientos culturales que contribuyan al engrandecimiento de nuestra ciudad, nuestra región y nuestro país. 	</p>
                 </div>
               </div>
             </div>
